--- a/webapp1/Pages/Index.cshtml
+++ b/webapp1/Pages/Index.cshtml
@@ -5,6 +5,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">This is a sample application for azure</a>.</p>
+    <h1 class="display-4">This is a sample application for azure</h1>
 </div>
