--- a/webapp1/Pages/Index.cshtml
+++ b/webapp1/Pages/Index.cshtml
@@ -5,5 +5,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">This is a sample application for azure</h1>
+    <h1 class="display-4">This is a sample application for azure on Github - Version 2</h1>
 </div>
